asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_application_type_argument.asteriacore
x : forall {f : Type -> Type}.
    forall {f : Type -> Type}.
      f g
  = x
  ;;
